--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ Select ONE Additional
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Unit 8 Project</title>
+    <title>Plant the Garden</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
     <style></style>
   </head>
 
   <body>
-    <h1>The Ocean</h1>
+    <h1>Plant Monstera's Garden!</h1>
     <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
   </body>
 </html>
