--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!-- Unit 8 Project
 Requirements
-[  ] Custom Function #1 - Takes Parameters
-[  ] Custom Function #2 - Takes Parameters
-[  ] Custom Function #3 - Takes Parameters
-[  ] Three Comments
+[ yes ] Custom Function #1 - Takes Parameters
+[ yes ] Custom Function #2 - Takes Parameters
+[ yes ] Custom Function #3 - Takes Parameters
+[ yes ] Three Comments
 
 Select ONE Additional 
-[ no ] Feature 1 - Include mouseX and mouseY
+[ yes ] Feature 1 - Include mouseX and mouseY
 [ no ] Feature 2 - Include keyPressed feature
 [ no ] Feature 3 - Include mouseClicked feature
 [ no ] Feature 4 - Change Cursor 
